# StoneServer

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .gitrepo  CMakeLists.txt  Dockerfile  LICENSE  README.md  appveyor.yml  docker-compose.yml  lib32.txt  loader  trace  wrapper
.github/: main.workflow
ae/: ae.c  ae_epoll.c  config.h  zmalloc.h
api/: .gitignore  .gitrepo  CMakeLists.txt
api/include/stone-api/: Blacklist.h  Chat.h  Command.h  Core.h  Script.h  apid.hpp
api/src/: cli.cpp  client.cpp  log.cpp  ping.cpp
dbus-api/: .gitrepo  CMakeLists.txt
dbus-api/include/dbus-api/: BlacklistService.h  ChatService.h  CommandService.h  WhitelistService.h
dbus-api/src/: blacklist.cpp  chat-broadcast.cpp  chat-send.cpp  chat.cpp  command.cpp  logger.cpp  main.cpp  multi-call.h  userlist.cpp  whitelist.cpp
exts/msgpack/: .gitrepo
exts/seasocks/: .gitrepo  CMakeLists.txt
exts/seasocks/cmake/: Config.h.in
exts/seasocks/src/: CMakeLists.txt
exts/seasocks/src/main/c/: CMakeLists.txt
exts/seasocks/src/main/c/util/: Json.cpp
exts/seasocks/src/main/header/: CMakeLists.txt
exts/seasocks/src/main/web/: CMakeLists.txt
exts/simppl/: .gitrepo  CMakeLists.txt
exts/simppl/src/: CMakeLists.txt  dispatcher.cpp
exts/sqlite3/: .gitignore  .gitrepo  CMakeLists.txt  LICENSE  README.md
include/: EnvPathUtil.h  FileUtil.h  apid.h  json.h
include/argparser/: arg.h  arg_parser.h
include/dbus-api/: BlacklistService.h  ChatService.h  CoreService.h  stdafx.h
include/hybris/: hook.h
include/hybris/jb/: linker.h
include/mcpelauncher/: app_platform.h  appplatform.h  crash_handler.h  minecraft_utils.h  minecraft_version.h  patch_utils.h  path_helper.h
include/minecraft/imported/: libm_symbols.h
include/properties/: property.h  property_list.h
include/stone-api/: Blacklist.h  Command.h  Core.h  apid.hpp
interface/: CMakeLists.txt
interface/include/interface/: base_interface.h  blacklist.h  chat.h  event_emitter.h  locator.hpp  modal_form.h  player_list.h  policy.h  tick.h
logger/: CMakeLists.txt
logger/include/: log.h
logger/src/: log.cpp
src/: EnvPathUtil.cpp  EnvPathUtil_MacOS.mm  apid.c  app_platform.cpp  appplatform.cpp  base64.cpp  blacklist.cpp  chat-broadcast.cpp  chat-send.cpp  chat.cpp  client.cpp  command.cpp  common.cpp  crash_handler.cpp  hook.cpp  hooks.c  hooks_io.c  hooks_net.c  hooks_net_darwin.c  hooks_pthread.c  hybris_android_log_hook.cpp  json.cpp  logger.cpp  main.cpp  minecraft_utils.cpp  modloader.cpp  openssl_multithread.cpp  openssl_multithread.h  patch_utils.cpp  path_helper.cpp  path_helper_osx.mm  userlist.cpp  whitelist.cpp
src/jb/: dlfcn.c  linker.c  linker_debug.h  rt.c
src/minecraft/: Api.h  App.h  AppPlatform.h  AutoComplete.h  AutomationClient.h  ClientInstance.h  CommandMessage.h  CommandOrigin.h  CommandOutputSender.h  CommandSelector.h  CommandUtils.h  ContentIdentity.h  Crypto.h  DedicatedServerCommandOrigin.h  EventResult.h  ExternalFileLevelStorageSource.h  I18n.h  Level.h  LevelSettings.h  MessagingCommand.h  MinecraftCommands.h  MinecraftEventing.h  MinecraftGame.h  MinecraftScreenModel.h  Multitouch.h  NetworkIdentifier.h  NullTextToSpeechClient.h  Player.h  Resource.h  ResourcePack.h  ScriptApi.h  ServerCommandOrigin.h  ServerInstance.h  ServerNetworkHandler.h  Social.h  UUID.h  V8.h  Whitelist.h  Xbox.h  symbols.cpp
src/minecraft/legacy/: App.h  MinecraftGame.h  Xbox.h
src/minecraft/std/: function.h  shared_ptr.h  string_darwin.cpp
stone/: CMakeLists.txt  simppl.patch
stone/src/: blacklist_mgr.hpp  custom_command.h  custom_command.hpp  dependency.cpp  dumper.cpp  dumper.h  main.cpp  operators.h  patched.cpp  patched.h  patched.hpp  server_minecraft_app.h  server_properties.h  services.h  stub_key_provider.h  utils.cpp  v8_platform.cpp  v8_platform.h  v8_utils.hpp  whitelist_mgr.hpp
stone/src/ExtAPI/: actorInfo.cpp  broadcastExternalEvent.cpp  broadcastMessage.cpp  changeDimension.cpp  checkAbility.cpp  checks.cpp  common.cpp  common.h  currentCommandOrigin.cpp  invokeCommand.cpp  invokeConsoleCommand.cpp  invokePrivilegedCommand.cpp  loadTag.cpp  log.cpp  muteChat.cpp  openModalForm.cpp  registerCommand.cpp  registerSoftEnum.cpp  saveTag.cpp  serverInfo.cpp  stop.cpp  transferPlayer.cpp  updateSoftEnum.cpp  worldInfo.cpp
stone/src/GlobalAPI/: SQLite3.cpp  checkApiLevel.cpp  common.cpp  common.h
stone/src/patched/: Ability.cpp  BedrockLog.cpp  Bind.cpp  Common.cpp  DedicatedServerCommandOrigin.cpp  Education.cpp  Encryption.cpp  FeatureToggles.cpp  Flags.h  FlatWorldGeneratorOptions.cpp  HardcodedOffsets.h  Level.cpp  ModalForm.cpp  Player.h  PlayerCommandOrigin.cpp  SayCommand.cpp  ScriptEngine.cpp  ScriptEventCoordinator.cpp  ScriptInterface.h  ServerCommandOrigin.cpp  ServerInstanceEventCoordinator.cpp  ServerLevelEventCoordinator.cpp  ServerMetrics.cpp  ServerNetworkHandler.cpp  SpawnParticle.cpp  TextPacket.cpp  v8.cpp
stoned/: CMakeLists.txt
stoned/src/: main.cpp
tests/: test-client.c  test.c
tools/: process_headers.py
tools/cppheaderparser/: CppHeaderParser.py
tools/proot/: CMakeLists.txt  gcc-wrapper
uintl/: CMakeLists.txt
uintl/include/: uintl.h
uintl/src/: uintl.cpp
utils/: CMakeLists.txt
utils/include/stone/: field_access.h  hook_helper.h  magic_func.h  operator.h  server_hook.h  static_hook.h  symbol.h  utils.h
utils/src/: server_hook.cpp  utils.cpp
version/include/stone/: version.h
version/src/: version.c
